# coffeevis_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  log
assets/: coffeevis_icon_128x128.qoi
src/: coffee_pixart_2x.ppm  constants.rs  main.rs
src/assets/: coffee_pixart.rs  mod.rs
src/audio/: audio_buffer.rs  audio_buffer_exp.rs  mod.rs  mod_old.rs
src/audio_input/: input_stream.rs  mod.rs
src/config/: mod.rs
src/console_mode/: mod.rs
src/controls/: mod.rs
src/data/: README.md  config.rs  delta.rs  desktop.rs  foreign.rs  log.rs  misc.rs  mod.rs  reader.rs  vislist.rs
src/graphics/: blend.rs  draw.rs  draw_raw.rs  gradient.rs  graphical_fn.rs  mod.rs  mod_ex.rs  space.rs
src/graphics/visualizers/: bars.rs  cross.rs  dash_line.rs  experiment1.rs  flower.rs  lazer.rs  mod.rs  oscilloscope.rs  ring.rs  shaky_coffee.rs  spectrum.rs  vol_sweeper.rs  wave.rs
src/math/: cplx.rs  dct.rs  fast.rs  fft.rs  mod.rs  rng.rs  shapes.rs  space.rs  vec2.rs
src/mem/: mod.rs
src/misc/: mod.rs  stackvec.rs
src/modes/: console_mode.rs  mod.rs  windowed_mode.rs
src/visualizers/: impostor.py  mod.rs
src/visualizers/classic/: bars.rs  cross.rs  dash_line.rs  lazer.rs  mod.rs  raw.rs  ring.rs  scopes.rs  shaky.rs  slice.rs  spectrum.rs  tests.rs  vol_sweeper.rs  wave.rs  wavelet.rs
src/visualizers/helpers/: mod.rs
src/visualizers/milk/: bubble.rs  mod.rs  rain.rs
src/visualizers/misc/: crt_patch.rs  example.rs  mod.rs  snake.rs
