[package]
name = "coffeevis"
version = "0.6.0"
rust-version = "1.85"
edition = "2024"
authors = ["Cas Pascal <casboi86@gmail.com>"]
description = "Personal graphical/console music visualizer for Linux."
license = "MIT"
keywords = ["graphics", "audio", "music", "visualizer"]
repository = "https://github.com/khoidauminh/coffeevis_rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
softbuffer = "0.4"
winit = "0.30"
qoi = "0.4.1"
crossterm = "0.29"
smallvec = "1.13.2"
xdg = "^2.1"

[features]
window_only = []
console_only = []
fast_color = []

[profile.dev]
overflow-checks = false

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary
