[package]
name = "coffeevis"
version = "0.7.0"
rust-version = "1.90"
edition = "2024"
authors = ["Cas Pascal <casboi86@gmail.com>"]
description = "Personal graphical/console music visualizer for Linux."
license = "GPL-3.0-only"
keywords = ["graphics", "audio", "music", "visualizer"]
repository = "https://github.com/khoidauminh/coffeevis_rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fast = []

[dependencies]
cpal = "0.17"
softbuffer = { version = "0.4", default-features = false, features = ["x11", "x11-dlopen", "wayland", "wayland-dlopen"]}
winit = { git = "https://github.com/rust-windowing/winit" }
crossterm = { version = "0.29", default-features = false, features = ["events", "windows"] }
xdg = "3"
arrayvec = "0.7"
qoi = "0.4"

[profile.dev]
overflow-checks = false

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary
lto = true
